syntax = "proto3";

package profile;
option go_package = "github.com/jonashiltl/sessions-backend/packages/grpc/profile";

import "packages/grpc/common/common.proto";

service ProfileService {
    rpc CreateProfile (CreateProfileRequest) returns (Profile) {};
    rpc GetProfile (GetProfileRequest) returns (Profile) {};
    rpc GetManyProfiles (GetManyProfilesRequest) returns (GetManyProfilesResponse) {};
    rpc GetProfileByUsername (GetProfileByUsernameRequest) returns (Profile) {};
    rpc GetMe (GetMeRequest) returns (Profile) {};
    rpc UpdateProfile (UpdateProfileRequest) returns (Profile) {};
    rpc DeleteProfile (DeleteProfileRequest) returns (common.MessageResponse) {};
    rpc UsernameTaken (UsernameTakenRequest) returns (UsernameTakenResponse) {};
}

message Profile {
    string id = 1;
    string username = 2;
    string firstname = 3;
    string lastname = 4;
    string avatar = 5;
    uint64 friend_count = 6;
}

message CreateProfileRequest {
    string id = 1;
    string username = 2;
    string firstname = 3;
    string lastname = 4;
    string avatar = 5;
}

message UpdateProfileRequest {
    string requester_id = 1;
    string id = 2;
    string username = 3;
    string firstname = 4;
    string lastname = 5;
    string avatar = 6;
}

message GetProfileRequest {
    string id = 1;
}

message GetManyProfilesRequest {
    repeated string ids = 1;
}

message GetManyProfilesResponse {
    repeated Profile profiles = 1;
}

message DeleteProfileRequest {
    string requester_id = 1;
    string id = 2;
}

message GetMeRequest {
    string id = 1;
}

message GetProfileByUsernameRequest {
    string username = 1;
}

message UsernameTakenRequest {
    string username = 1;
}
message UsernameTakenResponse {
    bool taken = 1;
}

message Empty {

}